# app/docs/swagger.json
@@ -99,6 +99,26 @@
                     }
                 }
             }
+        },
+        "/readCsvConcurrently": {
+            "get": {
+                "description": "Read Characters from a Csv File Concurrently",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Character"
+                ],
+                "summary": "Character List Csv",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
         }
     },
     "definitions": {
